# team-assistant-bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/assistant/: __init__.py  address_book.py  autocomplete.py  birthday.py  cli.py  handlers.py  models.py  notes.py  storage.py
